update user-service